# FacsimileProject

DocumentazioneUML/: CodiceUML.txt
Project/: CMakeLists.txt  main.cpp
Project/Paraview/src/: CMakeLists.txt  Triangolazione.cpp  Triangolazione.hpp
Project/src/: CMakeLists.txt  GeometryDFN.hpp  MergeSort.hpp  PolygonalMesh.hpp  Utils.cpp  Utils.hpp  Utils2.cpp  Utils2.hpp
Project/src_test/: CMakeLists.txt  TestDFN.hpp
results/: Fratture_FR10.txt  Fratture_FR200.txt  Fratture_FR3.txt  Fratture_FR362.txt  Fratture_FR50.txt  Fratture_FR82.txt  Tracce_FR10.txt  Tracce_FR200.txt  Tracce_FR362.txt  Tracce_FR50.txt  Tracce_FR82.txt
resultsParte2/: Tracce_FR10Celle0D.txt  Tracce_FR10Celle1D.txt  Tracce_FR10Celle2D.txt  Tracce_FR200Celle0D.txt  Tracce_FR200Celle1D.txt  Tracce_FR200Celle2D.txt  Tracce_FR362Celle0D.txt  Tracce_FR362Celle1D.txt  Tracce_FR362Celle2D.txt  Tracce_FR3Celle0D.txt  Tracce_FR3Celle1D.txt  Tracce_FR3Celle2D.txt  Tracce_FR50Celle0D.txt  Tracce_FR50Celle1D.txt  Tracce_FR50Celle2D.txt  Tracce_FR82Celle0D.txt  Tracce_FR82Celle1D.txt  Tracce_FR82Celle2D.txt
